Fixed horizontal overflow on the index page Removed unwanted sideways scrolling on mobile by fixing layout overflow

--- a/style.css
+++ b/style.css
@@ -102,12 +102,12 @@ main {
 
 .product-description {
     color: black;
-    max-width: 600%;
+    width: 100%;
     text-align: center;
     margin-top: 30px;
     padding-bottom: 1em;
-    font-size: 1.5em;
     font-style: normal;
+    font-size: 1.5em;
 }
 a {
     text-decoration: none;
